# scholar-share

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  parsed_pdf_content.txt  pyproject.toml  requirements.txt
app/: main.py
app/agents/: base_agent.py  blog_generator.py  paper_analyzer.py  poster_generator.py  poster_layout_analyzer.py  presentation_generator.py  presentation_planner.py  presentation_visual_analyzer.py  publisher.py  tikz_diagram_generator.py  tldr_generator.py
app/config/: settings.py
app/database/: database.py  models.py
app/services/: blog_image_service.py  devto_service.py  html_export_service.py  image_service.py  llm_service.py  pdf_service.py  pdf_to_image_service.py  poster_service.py  presentation_pdf_to_image_service.py
app/templates/blog_templates/: default_template.md
app/templates/poster_templates/: acm_template.tex  ieee_template.tex  nature_template.tex  tikzposter.md
app/templates/presentation_templates/: README.md  base_theme.html
app/utils/: helpers.py
